fix: hero section mobile design

--- a/src/Components/BotaoPedido/Botao.css
+++ b/src/Components/BotaoPedido/Botao.css
@@ -52,3 +52,24 @@ button:active {
     transform: scale(0.95);
 }
   
+
+
+@media(width < 720px) {
+  
+    button {
+        font-size: 20px;
+        background: #BF5697;
+        color: white;
+        padding: 1rem;
+        padding-left: 1em;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        border: none;
+        border-radius: 15px;
+        font-weight: 500;
+        font-size: 16px;
+    }
+      
+
+}
